<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/m_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container_bg"
    tools:context=".musicactivity">

    <RelativeLayout
        android:id="@+id/layout_top_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/gradient_bg">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo1"
            android:src="@drawable/ic_baseline_back" />

        <TextView
            android:id="@+id/txt_current_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/menu_btn"
            android:layout_toEndOf="@+id/back_btn"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/this_is_playing"
            android:textColor="#FAF7F7"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo2"
            android:src="@drawable/ic_baseline_menu_" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/layout_top_bottom">

        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo7"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/grad_bg"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/todo6" />

    </RelativeLayout>

    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/song_name"
        android:textColor="#FAF7F7"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/song_name"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/song_artist"
        android:textColor="#FAF7F7"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/layout_for_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_bg">

        <ImageView
            android:id="@+id/id_shuffle_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/todo3"
            android:src="@drawable/ic_baseline_shuffle_off" />

        <ImageView
            android:id="@+id/id_prev"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/play_pause"
            android:contentDescription="@string/todo8"
            android:src="@drawable/ic_baseline_skip_previous" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_play_circle_" />

        <ImageView
            android:id="@+id/id_next"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/play_pause"
            android:contentDescription="@string/todo4"
            android:src="@drawable/ic_baseline_skip_next" />

        <ImageView
            android:id="@+id/id_repeat_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/todo5"
            android:src="@drawable/ic_baseline_repeat" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/seekbar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/layout_for_button"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/duration_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/_1_40"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/duration_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/_4_40"
            android:textColor="@color/white" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>
</RelativeLayout>